 - When add_domain is used, allow the depth to which the domain
   name has leading levels stripped.
 - Fix gcc-4.0 compile problem. Andreas Jochens
 - Removed bogus loging that occurs before the logger is
   fully intialised when debug is enabled. Roberto Suarez Soto
 - Add link daemon module against socket libraries
 - Reopen logger so child processes get their own file descriptors

----------------------------------------------------------------------

27th May 2004
(Horms)
 * 1.15
 - I would like to thank Fastmail.FM for sponsoring work
   on the daemon map code. Horms
 - Debian packaging updates
 - Updated TODO
 - Moved *_makedb into $prefix/sbin from $prefix/bin
 - No other changes over 1.15beta1

----------------------------------------------------------------------

27th April 2004
(Horms)
 * 1.15beta1
 - Fixed some typos. Updated INSTALL. Jay zh
 - LDAP lookups no long return a bogus leading @ in the
   username.
 - Updated LDAP documentation in perditiondb(5)

----------------------------------------------------------------------

2nd April 2004
(Horms)
 * 1.14
   (The not April-fools release)
 - No changes from 1.14beta1

----------------------------------------------------------------------

23rd March 2004
(Horms)
  * 1.14beta1
  - Fixed a logic bug in Makefile.popmap(.in) where the popmaps would
    never be built.
  - Fixed problem with pid file creation on FreeBSD (and others)?
    zh Jay
  - Fixed minor memory leak in pid file creation
  - Fixed segmentation fault in ldap module if the zeroth atribute
    returned was NULL. Jay Zh
  - Fixed client_server_specification. It was broken.
  - Cleaned up wording in sample configuration file - Ged Haywood
  - The query_key option was documented as query_str (and refered
    to as query_string in this ChangeLog). The docuentation has been
    fixed. Rayed Alrashed
  - Changed ordering of table names in documentation to match the code
    for the MySQL, PostgreSQL and ODBC modules. Rayed Alrashed