@@ -29,6 +29,7 @@ XXX
    fully intialised when debug is enabled. Roberto Suarez Soto
  - Add link daemon module against socket libraries
  - Reopen logger so child processes get their own file descriptors
+ - Fix segmentation fault when timeout is set to 0. John Capo
 
 ----------------------------------------------------------------------
 
